tune Hikari CP setting.